# databricks-sdk-py

./: .codegen.json  .gitattributes  .gitignore  .package.json  .readthedocs.yaml  .release_metadata.json  CHANGELOG.md  CONTRIBUTING.md  EXTERNAL_IMPORT_TEST.md  MANIFEST.in  Makefile  NEXT_CHANGELOG.md  NOTICE  OPENAPI_GENERATION.md  README.md  UPSTREAM_SYNC.md  docs-requirements.txt  main.py  modified_files.txt  mypy.ini  pr_message.txt  pyproject.toml  report.md  requirements-build-lock.txt  requirements-check-manifest-lock.txt  requirements-dev-lock.txt  requirements-dev-py310.txt  requirements-dev-py311.txt  requirements-dev-py312.txt  requirements-dev-py313.txt  requirements-dev-py38.txt  requirements-dev-py39.txt  requirements-dev.txt  requirements-lock.txt  requirements-pip-tools-lock.txt  setup.cfg  setup.py  tagging.py
.claude/: settings.local.json
.claude/commands/: write-pr-description.md
.codegen/: __init__.py.tmpl  __init__py.tmpl  _last_sha  _openapi_sha  changelog.md.tmpl  changelog_config.yml  error_mapping.py.tmpl  error_overrides.py.tmpl  example.py.tmpl  lib.tmpl  service.py.tmpl
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  integration-tests.yml  labels.yaml
.github/ISSUE_TEMPLATE/: feature_request.md  sdk-issue.md
.github/workflows/: check-lock.yml  downstreams.yml  external-message.yml  integration-tests.yml  labels.yaml  message.yml  push.yml  release-test.yml  release.yml  sync-label.yml  tagging.yml  test.yml
databricks/: __init__.py
databricks/apps/: __init__.py  _client.py
databricks/sdk/: __init__.py  _base_client.py  _property.py  azure.py  casing.py  client.py  client_types.py  clock.py  common.py  config.py  core.py  credentials_provider.py  data_plane.py  dbconnect.py  dbutils.py  environments.py  errors.py  oauth.py  oidc.py  oidc_token_supplier.py  retries.py  test_client.py  user_agent.py  useragent.py  version.py
docs/: .codegen.json  Makefile  auth-types-reference.md  authentication.md  azure-ad.md  clients.rst  conf.py  dataplane.md  db_sphinx_ext.py  dbutils.md  examples.md  gen-client-docs.py  getting-started.md  index.rst  logging.md  oauth.md  package.rst.tmpl  packages.py  pagination.md  requirements.txt  stackql-deploy-dropdown-integration.md  wait.md  workspace-client.rst  workspace-client.rst.tmpl
docs/account/: access_control.rst  account-billing.rst  account-catalog.rst  account-iam.rst  account-oauth2.rst  account-provisioning.rst  account-settings.rst  billable_usage.rst  budgets.rst  credentials.rst  custom_app_integration.rst  encryption_keys.rst  groups.rst  index.rst  ip_access_lists.rst  log_delivery.rst  metastore_assignments.rst  metastores.rst  network_connectivity.rst  network_policy.rst  networks.rst  o_auth_enrollment.rst  o_auth_published_apps.rst  private_access.rst  published_app_integration.rst  service_principal_secrets.rst  service_principals.rst  settings.rst  storage.rst  storage_credentials.rst  users.rst  vpc_endpoints.rst  workspace_assignment.rst  workspaces.rst
docs/autogen/: account-client.rst  billing.rst  catalog.rst  compute.rst  files.rst  iam.rst  jobs.rst  ml.rst  oauth2.rst  pipelines.rst  provisioning.rst  reference.rst  serving.rst  settings.rst  sharing.rst  sql.rst  workspace-client.rst  workspace.rst
docs/clients/: account.rst  workspace.rst
docs/dbdataclasses/: agentbricks.rst  aibuilder.rst  aisearch.rst  apps.rst  billing.rst  bundle.rst  bundledeployments.rst  catalog.rst  cleanrooms.rst  compute.rst  dashboards.rst  database.rst  dataclassification.rst  dataquality.rst  disasterrecovery.rst  environments.rst  files.rst  iam.rst  iamv2.rst  index.rst  jobs.rst  knowledgeassistants.rst  marketplace.rst  ml.rst  networking.rst  oauth2.rst  pipelines.rst  postgres.rst  provisioning.rst  qualitymonitorv2.rst  serving.rst  settings.rst  settingsv2.rst  sharing.rst  sql.rst  supervisoragents.rst  tags.rst  vectorsearch.rst  workspace.rst
docs/workspace/: account_access_control_proxy.rst  alerts.rst  apps.rst  artifact_allowlists.rst  catalogs.rst  clean_rooms.rst  cluster_policies.rst  clusters.rst  command_execution.rst  connections.rst  credentials_manager.rst  current_user.rst  dashboard_widgets.rst  dashboards.rst  data_sources.rst  dbfs.rst  (+66 more)
examples/: README.md  agentbricks_openapi.json  custom_auth.py  external_browser_auth.py  extract_api_info.py  flask_app_with_oauth.py  generate_openapi_spec.py  generic_restapi.py  last_job_runs.py  list_compute_submitrun_runs.py  local_browser_oauth.py  starting_job_and_waiting.py
openapi-specs/: agentbricks.yaml  apps.yaml  billing.yaml  catalog.yaml  cleanrooms.yaml  compute.yaml  dashboards.yaml  database.yaml  dataquality.yaml  files.yaml  iam.yaml  iamv2.yaml  jobs.yaml  marketplace.yaml
stackql_databricks_provider/: README.md  STACKQL_PROVIDER_GENERATION.md  __init__.py  add_doc_examples.py  add_response_transforms.py  demo.py  doc_examples.json  extract.py  generate.py  inventory_gen.py  merge_views.py  package-lock.json  package.json  parser.py  registry.py  response_transforms.json  spec_overrides.json  stackql-aws-cloud-shell.sh  stackql-azure-cloud-shell.sh  stackql-google-cloud-shell.sh  tags.yaml  type_converters.py
tests/: clock.py  conftest.py  fixture_server.py  test_auth.py  test_auth.py.tmpl  test_auth_manual_tests.py  test_auth_profiles.py  test_azure.py  test_base_client.py  test_client.py  test_common.py  test_compute_mixins.py  test_config.py  test_core.py  test_credentials_provider.py  test_custom_headers.py  test_data_plane.py  test_dbfs_mixins.py  test_dbutils.py  test_default_profile.py  test_environments.py  test_errors.py  test_fieldmask.py  test_files.py  test_files_utils.py  test_iam.py  test_init_file.py  test_internal.py  test_jobs.py  test_jobs_mixin.py  test_mcp.py  test_metadata_service_auth.py  test_misc.py  test_model_serving_auth.py  test_notebook_oauth.py  test_oauth.py  test_oauth_scopes_integration.py  test_oidc.py  test_oidc_token_supplier.py  test_open_ai_mixin.py  (+7 more)
tools/: debug_types.py  generate_openapi_specs.py  openapi_generator.py  sdk_parser.py  test_generation.py
(+1556 files in other folders)
