[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-sdk"
dynamic = ["version"]
description = "Databricks SDK for Python (Beta)"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["databricks", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.1,<3",
    "google-auth~=2.0",
]

[project.urls]
Documentation = "https://databricks-sdk-py.readthedocs.io"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-mock",
    "black",
    "pycodestyle",
    "autoflake",
    "isort",
    "wheel",
    "ipython",
    "ipywidgets",
    "requests-mock",
    "pyfakefs",
    "databricks-connect",
    "pytest-rerunfailures",
    "openai",
    'langchain-openai; python_version > "3.7"',
    "httpx",
    "build", # some integration tests depend on the databricks-sdk-py wheel
]
notebook = [
    "ipython>=8,<10",
    "ipywidgets>=8,<9",
]
openai = [
    "openai",
    'langchain-openai; python_version > "3.7"',
    "httpx",
]

[tool.setuptools.dynamic]
version = { attr = "databricks.sdk.version.__version__" }

[tool.setuptools.packages.find]
include = ["databricks", "databricks.*"]

[tool.setuptools.package-data]
"databricks.sdk" = ["py.typed"]

[tool.black]
line-length = 120 
target-version = ['py37', 'py38', 'py39', 'py310', 'py311','py312','py313']

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.7"