[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-sdk"
dynamic = ["version"]
description = "Databricks SDK for Python (Beta)"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["databricks", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.1,<3",
    "google-auth~=2.0",
    # Exclude vulnerable protobuf versions: [,4.25.8), [5.26.0rc1, 5.29.5), [6.30.0rc1, 6.31.1)
    # https://security.snyk.io/vuln/SNYK-PYTHON-PROTOBUF-10364902
    "protobuf>=4.25.8,!=5.26.*,!=5.27.*,!=5.28.*,!=5.29.0,!=5.29.1,!=5.29.2,!=5.29.3,!=5.29.4,!=6.30.0,!=6.30.1,!=6.31.0,<7.0",
]

[project.urls]
Documentation = "https://databricks-sdk-py.readthedocs.io"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist>=3.6.1,<4.0",
    "pytest-mock",
    "black",
    "pycodestyle",
    "autoflake",
    "isort",
    "wheel",
    "ipython",
    "ipywidgets",
    "requests-mock",
    "pyfakefs",
    "databricks-connect",
    "pytest-rerunfailures",
    "openai",
    'langchain-openai; python_version > "3.7"',
    "httpx",
    "build", # some integration tests depend on the databricks-sdk-py wheel
]
notebook = [
    "ipython>=8,<10",
    "ipywidgets>=8,<9",
]
openai = [
    "openai",
    'langchain-openai; python_version > "3.7"',
    "httpx",
]

[tool.setuptools.dynamic]
version = { attr = "databricks.sdk.version.__version__" }

[tool.setuptools.packages.find]
include = ["databricks", "databricks.*"]

[tool.setuptools.package-data]
"databricks.sdk" = ["py.typed"]

[tool.black]
line-length = 120 
target-version = ['py37', 'py38', 'py39', 'py310', 'py311','py312','py313']

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.7"