[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-sdk"
dynamic = ["version"]
description = "Databricks SDK for Python (Beta)"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["databricks", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.1,<3",
    "google-auth~=2.0",
    # Exclude vulnerable protobuf versions: [,4.25.8), [5.26.0rc1, 5.29.5), [6.30.0rc1, 6.31.1)
    # https://security.snyk.io/vuln/SNYK-PYTHON-PROTOBUF-10364902
    "protobuf>=4.25.8,!=5.26.*,!=5.27.*,!=5.28.*,!=5.29.0,!=5.29.1,!=5.29.2,!=5.29.3,!=5.29.4,!=6.30.0,!=6.30.1,!=6.31.0,<7.0",
]

[project.urls]
Documentation = "https://databricks-sdk-py.readthedocs.io"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist>=3.6.1,<4.0",
    "pytest-mock",
    "ruff>=0.6.0",
    "pycodestyle",
    "wheel",
    "ipython",
    "ipywidgets",
    "requests-mock",
    "pyfakefs",
    "databricks-connect",
    "pytest-rerunfailures",
    "openai",
    "langchain-openai",
    "httpx",
    "build", # some integration tests depend on the databricks-sdk-py wheel
    "check-manifest",
]
notebook = [
    "ipython>=8,<10",
    "ipywidgets>=8,<9",
]
openai = [
    "openai",
    "langchain-openai",
    "httpx",
]

[tool.setuptools.dynamic]
version = { attr = "databricks.sdk.version.__version__" }

[tool.setuptools.packages.find]
include = ["databricks", "databricks.*"]

[tool.setuptools.package-data]
"databricks.sdk" = ["py.typed"]

[tool.ruff]
# Matches Universe's bazel/rules/python/format/ruff.toml.
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# I enables isort-style import sorting so regenerated files don't drift.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Package __init__.py files re-export public API surface; star imports and
# unused-looking imports are intentional.
"__init__.py" = ["F401", "F403", "F405", "F811"]
# databricks/sdk/service/ is generated by the openapi codegen.
# - F811: template can emit duplicate definitions across modules.
# - F841: `op_response = self._api.do(...)` pattern leaves an unused binding.
# Note: F401 (unused imports) is intentionally NOT ignored here — `make fmt`
# runs `ruff check --fix-only` which strips the fat-import header emitted by
# the codegen template. This is the autoflake replacement.
"databricks/sdk/service/*.py" = ["F811", "F841"]
# core.py re-exports config/credentials_provider via star imports for
# backwards compatibility.
"databricks/sdk/core.py" = ["F403", "F405"]
# errors/overrides.py is codegen-emitted with `from .platform import *`.
"databricks/sdk/errors/overrides.py" = ["F403", "F405"]
# tests/generated/ and tests/databricks/sdk/service/ are codegen-emitted
# transport-layer tests; they star-import generated fixture modules and
# follow the `query = {}` pattern from the service template.
"tests/generated/*.py" = ["F403", "F405"]
"tests/databricks/sdk/service/*.py" = ["F841"]

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
